than fix ver cua quan